login:  add loginViewModel and controller

--- a/RXDemo/Base.lproj/Main.storyboard
+++ b/RXDemo/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RXDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="RXDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -69,7 +69,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="loginButton" destination="Nrm-kT-2wc" id="b1H-6M-gxq"/>
+                        <outlet property="loginButton" destination="Nrm-kT-2wc" id="mHt-l6-XXF"/>
                         <outlet property="passwordTextField" destination="XJy-vs-q7E" id="t3d-fy-CbF"/>
                         <outlet property="usernameTextField" destination="HaX-Bx-QTg" id="S0f-tJ-eND"/>
                     </connections>
